fixed overflow gap at the bottom of the screen

--- a/src/components/about/About.css
+++ b/src/components/about/About.css
@@ -14,7 +14,7 @@
   position: relative;
   left: 10rem;
   width: 40rem;
-  top: -5rem;
+  top: 8rem;
   margin: 3%;
 }
 
@@ -45,13 +45,15 @@ div#curve1 svg {
   height: 10vh;
 }
 
-div#curve1 svg {
-  transform: rotate(270deg);
-  position: relative;
-  top: 14rem;
-  left: 40rem;
-  height: 25.4vh;
+
+
+#curve1 img {
+  position: absolute;
+  left: 54rem;
+  top: 46.6rem;
+  height: 100vh;
   z-index: 1;
+  /* border: 1px solid gray;  51.8rem*/
 }
 
 .description {
