--- a/src/index.css
+++ b/src/index.css
@@ -1,16 +1,15 @@
+
 body {
   margin: 0;
   font-family: "Calibre","Inter","San Francisco","SF Pro Text";
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-/*
-Calibre","Inter","San Francisco","SF Pro Text",-apple-system,system-ui,sans-serif
 
--apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif
-*/
+body::-webkit-scrollbar {
+  display: none;
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
